<resources>
    <string name="app_name" translatable="false">Rainbow</string>
    <string name="temp_unit_setting" translatable="false">temp_unit_setting</string>
    <string name="temp_unit_f" translatable="false">F</string>
    <string name="temp_unit_c" translatable="false">C</string>
    <string name="message_need_permission">Permission needed</string>
    <string name="message_grant_permission" translatable="false">I need this permission to work properly. You can allow it in your phone\'s settings.</string>
    <string name="label_setting">OPEN SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="next">NEXT</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hi there!</string>
    <string name="slide_1_desc">I\'m Rainbow and I\'ll show you how to use this app</string>
    <string name="slide_2_desc">Swipe left and right for navigation</string>
    <string name="slide_3_desc">Swipe down to refresh</string>
    <string name="app_need_permissions_to_run">This app cannot run without the permissions to use this feature</string>
    <string name="exit">Exit</string>
    <string name="icon_content_description" translatable="false">icon</string>
    <string name="pref_temp" translatable="false">tempUnit</string>
    <string name="pref_distance" translatable="false">distanceUnit</string>
    <string name="pref_speed" translatable="false">speedUnit</string>
    <string name="pref_pressure" translatable="false">pressureUnit</string>
    <string name="pref_explicit" translatable="false">explicitOrNot</string>
    <string name="im_not">I\'m not</string>
    <string name="hell_yeah">Hell yeah!</string>
    <string name="setting">Setting</string>
    <string name="temperature_setting_title">Select what you prefer: </string>
    <string name="distance_setting_title">Distance unit</string>
    <string name="speed_setting_title">Speed Unit</string>
    <string name="pressure_setting_title">Pressure Unit</string>
    <string name="rate_setting_title">Rate this super friendly app</string>
    <string name="about_setting_title">About Rainbow</string>
    <string name="temp_setting_degree_f" translatable="false">°F</string>
    <string name="temp_setting_degree_c" translatable="false">°C</string>
    <string name="temp_setting_degree_k" translatable="false">°K</string>
    <string name="your_depression">Your depression</string>
    <string name="depression_unit" translatable="false">depressions</string>
    <string name="mmhg" translatable="false">mmHg</string>
    <string name="psi" translatable="false">psi</string>
    <string name="banana_h">bananas per hour</string>
    <string name="miph" translatable="false">mph</string>
    <string name="kmph" translatable="false">kmph</string>
    <string name="bananas_unit" translatable="false">bananas</string>
    <string name="bananas_h_unit" translatable="false">bananas per hour</string>
    <string name="bananas">bananas</string>
    <string name="mi">mile</string>
    <string name="mi_uni" translatable="false">mile</string>
    <string name="km" translatable="false">km</string>
    <string name="scientist">I\'m a scientist</string>
    <string name="details_heading">Today\'s weather starter pack</string>
    <string name="real_feel_title">What it fucking feels like: </string>
    <string name="real_feel_title_explicit">What it feels like: </string>
    <string name="uv_index_title">UV Index</string>
    <string name="humidity_title">Humidity</string>
    <string name="visibility_title">Visibility</string>
    <string name="pressure_title">Pressure</string>
    <string name="air_quality_index_title">Air Quality Index</string>
    <string name="pressure_title_alt">Depression</string>
    <string name="about_dialog_heading">About Rainbow</string>
    <string name="about_dialog_intro">Hi! I\'m Rainbow, a super friendly weather app. I was born with a mission of bringing smiles and useful weather information to your daily life, definitely not because someone has too much free time on his hands.</string>
    <string name="about_dialog_outro">If you find me interesting, go ahead and give me a 5-star on PlayStore. Love ya!</string>
    <string name="loading_text">Asking the cloud prophet…</string>
    <string name="no_connection_tv1">Cloud not found</string>
    <string name="no_connection_tv2">Yeah clear sky is cool but have you tried connecting to the internet?</string>
    <string name="air_quality_dialog_heading">Air Quality Index</string>
    <string name="aqi_good" translatable="true">Good</string>
    <string name="aqi_moderate" translatable="true">Moderate</string>
    <string name="aqi_unhealthy_sensitive" translatable="true">Unhealthy for Sensitive Group</string>
    <string name="aqi_unhealthy" translatable="true">Unhealthy</string>
    <string name="aqi_very_unhealthy" translatable="true">Very Unhealthy</string>
    <string name="aqi_hazardous" translatable="true">Hazardous</string>
    <string name="aqi_good_des" translatable="true">Air quality is considered satisfactory</string>
    <string name="aqi_moderate_des" translatable="true">Air quality is acceptable</string>
    <string name="aqi_unhealthy_sensitive_des" translatable="true">Members of sensitive groups may experience health effects</string>
    <string name="aqi_unhealthy_des" translatable="true">Everyone may begin to experience health effects</string>
    <string name="aqi_very_unhealthy_des" translatable="true">Everyone may experience serious health effects</string>
    <string name="aqi_hazardous_des" translatable="true">Health warning of emergency conditions</string>
    <string name="r_aqi_good_des" translatable="true">Go fill your lung with fresh air!!!</string>
    <string name="r_aqi_moderate_des" translatable="true">Seems … breathable?</string>
    <string name="r_aqi_unhealthy_sensitive_des" translatable="true">It\'s unhealthy for special snowflakes, but wear a face mask just in case</string>
    <string name="r_aqi_unhealthy_des" translatable="true">You probably gonna need a gas mask!</string>
    <string name="r_aqi_very_unhealthy_des" translatable="true">Lung diseases are outside! Gotta catch \'em all!</string>
    <string name="r_aqi_hazardous_des" translatable="true">Give yourself a day off. Don\'t commit suicide by breathing the air outside.</string>
    <string name="aqi_good_des_full" translatable="true">Air quality is considered satisfactory, and air pollution poses little or no risk.</string>
    <string name="aqi_moderate_des_full" translatable="true">Air quality is acceptable; however, for some pollutants there may be a moderate health concern for a very small number of people who are unusually sensitive to air pollution.</string>
    <string name="aqi_unhealthy_sensitive_des_full" translatable="true">Members of sensitive groups may experience health effects. The general public is not likely to be affected.</string>
    <string name="aqi_unhealthy_des_full" translatable="true">Everyone may begin to experience health effects; members of sensitive groups may experience more serious health effects.</string>
    <string name="aqi_very_unhealthy_des_full" translatable="true">Health warnings of emergency conditions. The entire population is more likely to be affected.</string>
    <string name="aqi_hazardous_des_full" translatable="true">Health alert: everyone may experience more serious health effects.</string>
    <string name="aqi_good_cs" translatable="true">None</string>
    <string name="aqi_moderate_cs" translatable="true">Active children and adults, and people with respiratory disease, such as asthma, should limit prolonged outdoor exertion.</string>
    <string name="aqi_unhealthy_sensitive_cs" translatable="true">Active children and adults, and people with respiratory disease, such as asthma, should limit prolonged outdoor exertion.</string>
    <string name="aqi_unhealthy_cs" translatable="true">Active children and adults, and people with respiratory disease, such as asthma, should avoid prolonged outdoor exertion; everyone else, especially children, should limit prolonged outdoor exertion</string>
    <string name="aqi_very_unhealthy_cs" translatable="true">Active children and adults, and people with respiratory disease, such as asthma, should avoid all outdoor exertion; everyone else, especially children, should limit outdoor exertion.</string>
    <string name="aqi_hazardous_cs" translatable="true">Everyone should avoid all outdoor exertion</string>
    <string name="sun">Sun</string>
    <string name="wind_title" translatable="true">Wind</string>
    <string name="wind_north" translatable="true">North</string>
    <string name="wind_north_east" translatable="true">Northeast</string>
    <string name="wind_north_west" translatable="true">Northwest</string>
    <string name="wind_east" translatable="true">East</string>
    <string name="wind_south" translatable="true">South</string>
    <string name="wind_south_east" translatable="true">Southeast</string>
    <string name="wind_south_west" translatable="true">Southwest</string>
    <string name="wind_west" translatable="true">West</string>
    <string name="the_next_hours_title">The next hours</string>
    <string name="location_list_title">Locations</string>
    <string name="quote_placeholder" translatable="false">…</string>
    <string name="depression_level_title">Depression</string>
    <string name="provided_by_aqi_cn_org">Provided by aqicn.org</string>
    <string name="explicit_setting_title">Are you okay with offensive words?</string>
    <string name="uv_summary_0">Sun set</string>
    <string name="uv_summary_3">Low</string>
    <string name="uv_summary_6">Moderate</string>
    <string name="uv_summary_8">High</string>
    <string name="uv_summary_11">Very high</string>
    <string name="uv_summary_11_above">Extreme</string>
    <string name="what_to_eat_title">Any places to eat nearby?</string>
    <string name="cloud_cover_title">Cloud</string>
    <string name="why_this_pack">Why this pack?</string>
    <string name="cause_it_s">Because it\'s</string>
    <string name="random_color">Colors</string>
    <string name="weatherPhoto">Weather photo</string>
    <string name="background_setting_title">Home Background</string>
    <string name="random_picture">Random photo</string>
    <string name="photo_details_title">Photo details</string>
    <string name="not_available" translatable="false">N/A</string>
    <string name="photo_name_na">Photo\'s description not provided</string>
    <string name="sponsor">Sponsor</string>
    <string name="time_place_holder">Time:</string>
    <string name="daily_notification_setting_title">Daily notification</string>
    <string name="chance">Chance</string>
    <string name="sun_rise">Sunrise</string>
    <string name="mid_day">Midday</string>
    <string name="sun_set">Sunset</string>
    <string name="hourly_forecast_title">The next hours</string>
    <string name="sun_not_explicit">Blazing hot plasma ball</string>
    <string name="air_quality_levels">Air Quality Levels</string>
    <string name="color_legend">Color legend</string>
    <string name="cautionary_statement">Cautionary Statement</string>
    <string name="aqi_source_standard">The tables above defines the Air Quality Index scale as defined by the US-EPA 2016 standard.</string>
    <string name="now">Now</string>
    <string name="depress_val_0">Mild</string>
    <string name="depress_val_1">Depressed</string>
    <string name="depress_val_2">Crippling</string>
    <string name="depress_val_3">A little</string>
    <string name="depress_val_5">Oof</string>
    <string name="depress_val_6">Somewhat</string>
    <string name="depress_val_7">Not at all</string>
    <string name="depress_val_8" translatable="false">Aaargghhh!!</string>
    <string name="depress_val_9" translatable="false">42?</string>
    <string name="depress_val_10">Unbearable</string>
    <string name="depress_val_11">Neh</string>
</resources>