<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DA5F6A"
        app:fontFamily="@font/nunito"
        android:text="@string/about_dialog_heading"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="@dimen/text_view_24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_32"
        android:gravity="center"
        android:text="@string/about_dialog_intro"
        app:fontFamily="@font/nunito"
        android:textSize="@dimen/text_view_20sp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_32"
        android:paddingRight="@dimen/margin_32"
        android:paddingBottom="@dimen/margin_32"
        android:gravity="center"
        android:text="@string/about_dialog_outro"
        app:fontFamily="@font/nunito"
        android:textSize="@dimen/text_view_20sp"
        android:textColor="#000000"/>
    <Button
        android:id="@+id/btn_close_about"
        android:textColor="#ffffff"
        android:textSize="@dimen/text_view_20sp"
        app:fontFamily="@font/nunito"
        android:text="@string/about_dialog_close_text"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:background="#DA5F6A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>