<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_me_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pureWhite"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btn_close_about"
        android:layout_width="@dimen/icon_30dp"
        android:layout_height="@dimen/icon_30dp"
        android:layout_marginEnd="@dimen/margin_16"
        android:src="@drawable/ic_round_close_b"
        app:layout_constraintBottom_toBottomOf="@id/about_me_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/about_me_title"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/about_me_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_16"
        android:text="@string/about_setting_title"
        android:textColor="@color/absoluteBlack"
        android:textSize="@dimen/text_view_24dp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_me_title">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingStart="@dimen/margin_32"
            android:paddingEnd="@dimen/margin_32"
            android:paddingBottom="@dimen/margin_32"
            android:text="@string/about_dialog_intro"
            android:textColor="@color/absoluteBlack"
            android:textSize="@dimen/text_view_20dp"
            app:fontFamily="@font/montserrat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="@dimen/margin_32"
            android:paddingEnd="@dimen/margin_32"
            android:paddingBottom="@dimen/margin_32"
            android:text="@string/about_dialog_outro"
            android:textColor="@color/absoluteBlack"
            android:textSize="@dimen/text_view_20dp"
            app:fontFamily="@font/montserrat" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>